--- a/masonry-demo/src/sass/partials/_screen.scss
+++ b/masonry-demo/src/sass/partials/_screen.scss
@@ -18,17 +18,25 @@ $susy: (
   height: 14em;
   border: 1px solid black;
   box-sizing: border-box;
+  // display: inline-table;
   &:nth-of-type(4n + 1) { height: 12em; }
   &:nth-of-type(4n + 2) { height: 8em; }
   &:nth-of-type(4n + 3) { height: 10em; }
   &.giant {
     width: 50%;
-    height: 25em;
+    height: 400px;
   }
   &:hover {
-    opacity: .7;
+    cursor: pointer;
   }
 }
+
+.item .item-content {
+  width:  100%;
+  height: 100%;
+  @include transition(width 0.4s, height 0.4s)
+}
+
 .red { background-color: red; }
 .green { background-color: green; }
 .blue { background-color: blue; }
