--- a/masonry-demo/src/sass/partials/_screen.scss
+++ b/masonry-demo/src/sass/partials/_screen.scss
@@ -14,6 +14,9 @@ $susy: (
 .grid-sizer { width: 25%; }
 .item {
   width: 25%;
+  @media screen and (max-width: 600px){
+    width: 50%;
+  }
   display: inline-block;
   height: 14em;
   border: 1px solid black;
@@ -24,6 +27,7 @@ $susy: (
   &:nth-of-type(4n + 3) { height: 10em; }
   &.giant {
     width: 50%;
+    @media screen and (max-width: 600px){ width: 100%; }
     height: 400px;
   }
   &:hover {
