--- a/go/server/templates/view.html
+++ b/go/server/templates/view.html
@@ -1,5 +1,5 @@
 <h1>{{.Title}}</h1>
 
-<p>[<a href="/edit/{{.Title}}">edit</a>]</p>
+<p>[<a href="/">Back</a>] [<a href="/edit/{{.Title}}">Edit</a>]</p>
 
 <div>{{printf "%s" .Body}}</div>
