--- a/go/server/templates/view.html
+++ b/go/server/templates/view.html
@@ -2,4 +2,4 @@
 
 <p>[<a href="/">Back</a>] [<a href="/edit/{{.Title}}">Edit</a>]</p>
 
-<div>{{printf "%s" .Body}}</div>
+<pre>{{printf "%s" .Body}}</pre>
