Split go wiki up into modular partials

--- a/go/wiki/templates/edit.html
+++ b/go/wiki/templates/edit.html
@@ -1,3 +1,4 @@
+{{ template "header" . }}
 <h1>Editing {{.Title}}</h1>
 
 <form action="/save/{{.Title}}" method="POST">
@@ -8,3 +9,4 @@
     <input type="submit" value="Save">
   </div>
 </form>
+{{ template "footer" . }}
