--- a/go/wiki/templates/index.html
+++ b/go/wiki/templates/index.html
@@ -1,3 +1,4 @@
+{{ template "header" . }}
 <h1>GoLang Wiki!</h1>
 <p>The backend of this server is written entirely in Go &amp; persisted through
 MongoDB. <a href="https://github.com/alkrauss48/labs/tree/master/go/wiki">See the code</a></p>
@@ -16,25 +17,4 @@ MongoDB. <a href="https://github.com/alkrauss48/labs/tree/master/go/wiki">See th
 <p style="display: none;" class="too-many">
   Too many entries - please delete some before you can add more.
 </p>
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-  if($('.entry').length > 20){
-    $('#newWiki').hide();
-    $('.too-many').show();
-  }
-  $('#newWiki').submit(function(event){
-    $(this).attr('action', location.origin + "/edit/" + $('#title').val());
-  });
-</script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new
-     Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-38589428-3', 'auto');
-    ga('send', 'pageview');
-
-</script>
+{{ template "footer" . }}
