Add bootswatch theme to wiki

--- a/go/wiki/templates/partials/_header.html
+++ b/go/wiki/templates/partials/_header.html
@@ -5,7 +5,19 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
   <title>Go Wiki</title>
+  <link rel="stylesheet"
+  href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/readable/bootstrap.min.css" title="" type="text/css" />
+
+  <style type="text/css" media="all">
+    #main {
+      max-width: 58em;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
 
 </head>
 <body>
+  <main id="main" class="row">
+    <section class="col-md-12">
 {{end}}
