--- a/go/wiki/templates/edit.html
+++ b/go/wiki/templates/edit.html
@@ -2,11 +2,11 @@
 <h1>Editing {{.Title}}</h1>
 
 <form action="/save/{{.Title}}" method="POST">
-  <div>
-    <textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea>
+  <div class="form-group">
+    <label for="body">Content:</label>
+    <textarea class="form-control" name="body" id="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea>
   </div>
-  <div>
-    <input type="submit" value="Save">
-  </div>
+  <a class="btn btn-default" href="/view/{{.Title}}">Back</a>
+  <input class="btn btn-primary"type="submit" value="Save">
 </form>
 {{ template "footer" . }}
