--- a/go/wiki/templates/index.html
+++ b/go/wiki/templates/index.html
@@ -4,15 +4,19 @@
 MongoDB. <a href="https://github.com/alkrauss48/labs/tree/master/go/wiki">See the code</a></p>
 
 <h4>Entries</h4>
+<div class="list-group">
 {{range .}}
-<p class="entry">[<a href="/view/{{.Title}}">{{.Title}}</a>] - <a
-  href="/delete/{{.Title}}">Delete</a></p>
+  <a class="list-group-item" href="/view/{{.Title}}">{{.Title}}</a>
 {{end}}
+</div>
 
 <h4>Add New</h4>
 <form id="newWiki" accept-charset="utf-8">
-  <input type="text" placeholder="Title" id="title" value="" />
-  <input type="submit" id="" value="Create" />
+  <div class="form-group">
+    <label for="title">Title:</label>
+    <input class="form-control" type="text" placeholder="Title" id="title" value="" />
+  </div>
+  <input class="btn btn-primary" type="submit" id="" value="Create" />
 </form>
 <p style="display: none;" class="too-many">
   Too many entries - please delete some before you can add more.
