--- a/go/wiki/templates/partials/_footer.html
+++ b/go/wiki/templates/partials/_footer.html
@@ -1,4 +1,6 @@
 {{define "footer"}}
+    </section>
+  </main>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" charset="utf-8">
