--- a/flip-typed-demo/src/sass/partials/_card.scss
+++ b/flip-typed-demo/src/sass/partials/_card.scss
@@ -16,7 +16,7 @@ figure {
   width: 100%;
   height: 100%;
   position: relative;
-  perspective: 100%;
+  @include perspective(2000px);
 }
 
 #card {
