--- a/carnegie-chart/styles/custom.css
+++ b/carnegie-chart/styles/custom.css
@@ -7,6 +7,10 @@
   padding-right: 5px;
 }
 
+.content p {
+  padding: 0 2em;
+}
+
 h6.right {
   text-align: right;
 }
@@ -65,6 +69,7 @@ div[id^="description"] {
 }
 
 p.desc {
+  padding: 0;
   margin-left: .5em;
   margin-bottom: .3em;
   color: #e1524a;
